FP-385: Prevent too short a height on Data Files

--- a/client/src/components/DataFiles/DataFiles.global.css
+++ b/client/src/components/DataFiles/DataFiles.global.css
@@ -5,4 +5,7 @@ body.has-loaded-datafiles {
   /* HACK: Should instead (ask Design) reduce button width on narrow screen */
   --min-width: 925px; /* approx. Data Files table before table header cut off */
   /* --min-width: 1152px; /* approx. Data Files table no horz. scrollbar */
+
+  /* NOTE: This value should account for welcome message and /work2 message */
+  --min-height: 370px; /* tall enough to avoid .listing-placeholder scroll */
 }
